--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h3>UWIDUHAYE Villele Jean Baptiste</h3>
                     <p><b>A content Creator</b> Villele is a content <br>creator who crafts engaging <br>
                         and informative content <br> to effectively <br>communicate the team's skills and projects.</p>
-                    <p><a href="mailto:uvillele.com">Email:uvillele.com</a></p>
+                    <p><a href="mailto:uvillele.com">Email:uvillele@gmail.com</a></p>
                     <p>Phone: +250 788 321 987</p>
                 </div>
             </div>
